INSERTION DES ICONES

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="sass/main.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
         <title>ohmyfood</title>
     </head>
     <body>
@@ -15,7 +16,7 @@
         <main>
             <section class="suiteheader">
                 <div class="rechercher">
-                    <p class="icone"><!--...........INSERER LE LIEN ICONE............--> </p>
+                    <p><div class="icone"><i class="fas fa-map-marker-alt"></i></div></p>
                     <form><!--..............INSERER LE FORMULAIRE.............--></form>
                 </div>
                 <div class="explorer">
@@ -25,9 +26,9 @@
                 </div>
                 <div class="fonctionnement">
                     <h2>Fonctionnement</h2>
-                    <nav><a href="#"><!--NUMERO 1--><!--ICONE TELEPHONE--><h3>Choisissez un restaurant</h3></a></nav>
-                    <nav><a href="#"><!--NUMERO 2--><!--ICONE LISTE--><h3>Composez votre menu</h3></a></nav>
-                    <nav><a href="#"><!--NUMERO 3--><!--ICONE MAISON--><h3>Dégustez au restaurant</h3></a></nav>
+                    <nav><a href="#"><!--NUMERO 1--><i class="fas fa-mobile-alt"></i><h3>Choisissez un restaurant</h3></a></nav>
+                    <nav><a href="#"><!--NUMERO 2--><i class="fas fa-list-ul"></i><h3>Composez votre menu</h3></a></nav>
+                    <nav><a href="#"><!--NUMERO 3--><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></a></nav>
                 </div>
             </section>
             <section class="restaurants">
@@ -38,7 +39,7 @@
                     <div class="description">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
-                        <!--INSERER ICONE COEUR INTERACTIF--></div>
+                        <p><i class="far fa-heart"></i></p></div>
                 </article>
                 <article class="carte">
                     <div class="photo">
@@ -46,7 +47,7 @@
                     <div class="description">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
-                        <!--INSERER ICONE COEUR INTERACTIF--></div>
+                        <p><i class="far fa-heart"></i></p></div>
                 </article>
                 <article class="carte">
                     <div class="photo">
@@ -54,7 +55,7 @@
                     <div class="description">
                         <h3>A la française</h3>
                         <p>Cité Rouge</p>
-                        <!--INSERER ICONE COEUR INTERACTIF--></div>
+                        <p><i class="far fa-heart"></i></p></div>
                 </article>
                 <article class="carte">
                     <div class="photo">
@@ -62,15 +63,15 @@
                     <div class="description">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Mérencourt</p>
-                        <!--INSERER ICONE COEUR INTERACTIF--></div>
+                        <p><i class="far fa-heart"></i></p></div>
                 </article>
             </section>
         </main>
         <footer>
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
             <div class="menu_footer">
-                <a href="#"><!--ICONE COUVERTS-->Proposer un restaurant</a><br/>
-                <a href="#"><!--ICONE POIGNE DE MAIN-->Devenir partenaire</a><br/>
+                <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a><br/>
+                <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a><br/>
                 <a href="#">Mentions légales</a><br/>
                 <a href="#">Contact</a>
             </div>
