INSERTION DU CHAMP FORMULAIRE

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <section class="suiteheader">
                 <div class="rechercher">
                     <p><div class="icone"><i class="fas fa-map-marker-alt"></i></div></p>
-                    <form><!--..............INSERER LE FORMULAIRE.............--></form>
+                    <form method="post" action="traitement.php">
+                        <input class="ville" type="search" value="Paris, Belleville"/>
+                    </form>
                 </div>
                 <div class="explorer">
                     <h1>Réservez le menu qui vous convient</h1>
