--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </div>
                 <div class="fonctionnement">
                     <h2>Fonctionnement</h2>
-                    <nav><a href="#"><!--NUMERO 1--><i class="fas fa-mobile-alt"></i><h3>Choisissez un restaurant</h3></a></nav>
-                    <nav><a href="#"><!--NUMERO 2--><i class="fas fa-list-ul"></i><h3>Composez votre menu</h3></a></nav>
-                    <nav><a href="#"><!--NUMERO 3--><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></a></nav>
+                    <nav><p>1</p><a href="#"><i class="fas fa-mobile-alt"></i><h3>Choisissez un restaurant</h3></a></nav>
+                    <nav><p>2</p><a href="#"><i class="fas fa-list-ul"></i><h3>Composez votre menu</h3></a></nav>
+                    <nav><p>3</p><a href="#"><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></a></nav>
                 </div>
             </section>
             <section class="restaurants">
