--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header>
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
         </header>
+        <!--..................1ere SECTION..................-->
         <main>
             <section class="suiteheader">
                 <div class="rechercher">
@@ -33,6 +34,7 @@
                     <nav><p>3</p><a href="#"><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></a></nav>
                 </div>
             </section>
+        <!--................2ème SECTION.................-->
             <section class="restaurants">
                 <h2>Restaurants</h2>
                 <article class="carte">
@@ -69,6 +71,7 @@
                 </article>
             </section>
         </main>
+        <!--..................FOOTER.................-->
         <footer>
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
             <div class="menu_footer">
