--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     </head>
     <body>
         <!--................HEADER...............-->
-        <header>
+        <header> 
+        <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
+        </div>
         </header>
         <!--..................1ere SECTION..................-->
         <main>
@@ -29,9 +31,18 @@
                 </div>
                 <div class="fonctionnement">
                     <h2>Fonctionnement</h2>
-                    <nav><p>1</p><a href="#"><i class="fas fa-mobile-alt"></i><h3>Choisissez un restaurant</h3></a></nav>
-                    <nav><p>2</p><a href="#"><i class="fas fa-list-ul"></i><h3>Composez votre menu</h3></a></nav>
-                    <nav><p>3</p><a href="#"><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></a></nav>
+                    <nav class="choix">
+                        <div class="num"><p>1</p></div>
+                        <div class="choix_contenu"><i class="fas fa-mobile-alt"></i><h4>Choisissez un restaurant</h4></div>
+                    </nav>
+                    <nav class="choix">
+                        <div class="num"><p>2</p></div>
+                        <div class="choix_contenu"><i class="fas fa-list-ul"></i><h4>Composez votre menu</h4></div>
+                    </nav>
+                    <nav class="choix">
+                        <div class="num"><p>3</p></div>
+                        <div class="choix_contenu"><i class="fas fa-store"></i><h4>Dégustez au restaurant</h4></div>
+                    </nav>
                 </div>
             </section>
         <!--................2ème SECTION.................-->
@@ -42,32 +53,36 @@
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurant la palette du goud"></div>
                     <div class="description">
                         <h3>La palette du goût</h3>
+                        <p><i class="far fa-heart"></i></p>
                         <p>Ménilmontant</p>
-                        <p><i class="far fa-heart"></i></p></div>
+                        </div>
                 </article>
                 <article class="carte">
                     <div class="photo">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée"></div>
                     <div class="description">
                         <h3>La note enchantée</h3>
+                        <p><i class="far fa-heart"></i></p>
                         <p>Charonne</p>
-                        <p><i class="far fa-heart"></i></p></div>
+                        </div>
                 </article>
                 <article class="carte">
                     <div class="photo">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant A la française"></div>
                     <div class="description">
                         <h3>A la française</h3>
+                        <p><i class="far fa-heart"></i></p>
                         <p>Cité Rouge</p>
-                        <p><i class="far fa-heart"></i></p></div>
+                        </div>
                 </article>
                 <article class="carte">
                     <div class="photo">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo du restaurant Le délice des sens"></div>
                     <div class="description">
                         <h3>Le délice des sens</h3>
+                        <p><i class="far fa-heart"></i></p>
                         <p>Folie-Mérencourt</p>
-                        <p><i class="far fa-heart"></i></p></div>
+                        </div>
                 </article>
             </section>
         </main>
