--- a/index.html
+++ b/index.html
@@ -26,74 +26,73 @@
                 </div>
                 <div class="explorer">
                     <h1>Réservez le menu qui vous convient</h1>
-                    <p>Découvrez des restaurants d'exception, séléctionés par nos soins.</p>
+                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                     <button>Explorer nos restaurants</button>
                 </div>
                 <div class="fonctionnement">
                     <h2>Fonctionnement</h2>
-                    <nav class="choix">
-                        <div class="num"><p>1</p></div>
-                        <div class="choix_contenu"><i class="fas fa-mobile-alt"></i><h4>Choisissez un restaurant</h4></div>
-                    </nav>
-                    <nav class="choix">
-                        <div class="num"><p>2</p></div>
-                        <div class="choix_contenu"><i class="fas fa-list-ul"></i><h4>Composez votre menu</h4></div>
-                    </nav>
-                    <nav class="choix">
-                        <div class="num"><p>3</p></div>
-                        <div class="choix_contenu"><i class="fas fa-store"></i><h4>Dégustez au restaurant</h4></div>
-                    </nav>
+                    <a href="#"><button><div class="choix">
+                        <div class="num"><p>1</p></div><i class="fas fa-mobile-alt"></i><h4>Choisissez un restaurant</h4></div>
+                    </button></a> 
+                    <a href="#"><button><div class="choix">
+                        <div class="num"><p>2</p></div><i class="fas fa-list-ul"></i><h4>Composez votre menu</h4></div>
+                    </button></a>
+                    <a href="#"><button><div class="choix">
+                        <div class="num"><p>3</p></div><i class="fas fa-store"></i><h4>Dégustez au restaurant</h4></div>
+                    </button></a>
                 </div>
             </section>
         <!--................2ème SECTION.................-->
             <section class="restaurants">
                 <h2>Restaurants</h2>
-                <article class="carte">
+                <article class="carte"><a href="#">
                     <div class="photo">
+                        <aside>Nouveau</aside>
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurant la palette du goud"></div>
                     <div class="description">
                         <h3>La palette du goût</h3>
                         <p><i class="far fa-heart"></i></p>
                         <p>Ménilmontant</p>
-                        </div>
+                        </div></a>
                 </article>
-                <article class="carte">
+                <article class="carte"><a href="#">
                     <div class="photo">
+                        <aside>Nouveau</aside>
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée"></div>
                     <div class="description">
                         <h3>La note enchantée</h3>
                         <p><i class="far fa-heart"></i></p>
                         <p>Charonne</p>
-                        </div>
+                        </div></a>
                 </article>
-                <article class="carte">
+                <article class="carte"><a href="#">
                     <div class="photo">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant A la française"></div>
                     <div class="description">
                         <h3>A la française</h3>
                         <p><i class="far fa-heart"></i></p>
                         <p>Cité Rouge</p>
-                        </div>
+                        </div></a>
                 </article>
-                <article class="carte">
+                <article class="carte"><a href="#">
                     <div class="photo">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo du restaurant Le délice des sens"></div>
                     <div class="description">
                         <h3>Le délice des sens</h3>
                         <p><i class="far fa-heart"></i></p>
                         <p>Folie-Mérencourt</p>
-                        </div>
+                        </div></a>
                 </article>
             </section>
         </main>
         <!--..................FOOTER.................-->
         <footer>
-            <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
+            <div class="logofooter"><p>ohmyfood</p></div>
             <div class="menu_footer">
                 <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a><br/>
                 <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a><br/>
                 <a href="#">Mentions légales</a><br/>
-                <a href="#">Contact</a>
+                <a href="#email">Contact</a>
             </div>
         </footer>
     </body>
