--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
                 <div class="explorer">
                     <h1>Réservez le menu qui vous convient</h1>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <button>Explorer nos restaurants</button>
+                    <a href="#restaurants"><button>Explorer nos restaurants</button></a>
                 </div>
                 <div class="fonctionnement">
                     <h2>Fonctionnement</h2>
-                    <a href="#"><button><div class="choix">
+                    <button><div class="choix">
                         <div class="num"><p>1</p></div><i class="fas fa-mobile-alt"></i><h4>Choisissez un restaurant</h4></div>
-                    </button></a> 
-                    <a href="#"><button><div class="choix">
+                    </button> 
+                    <button><div class="choix">
                         <div class="num"><p>2</p></div><i class="fas fa-list-ul"></i><h4>Composez votre menu</h4></div>
-                    </button></a>
-                    <a href="#"><button><div class="choix">
+                    </button>
+                    <button><div class="choix">
                         <div class="num"><p>3</p></div><i class="fas fa-store"></i><h4>Dégustez au restaurant</h4></div>
-                    </button></a>
+                    </button>
                 </div>
             </section>
         <!--................2ème SECTION.................-->
             <section class="restaurants">
-                <h2>Restaurants</h2>
+                <h2 id="restaurants">Restaurants</h2>
                 <article class="carte"><a href="#">
                     <div class="photo">
                         <aside>Nouveau</aside>
@@ -89,10 +89,11 @@
         <footer>
             <div class="logofooter"><p>ohmyfood</p></div>
             <div class="menu_footer">
-                <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a><br/>
-                <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a><br/>
-                <a href="#">Mentions légales</a><br/>
-                <a href="#email">Contact</a>
+                <ul>
+                <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#email">Contact</a></li>
             </div>
         </footer>
     </body>
