--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 </div>
             </section>
         <!--................2ème SECTION.................-->
-            <section class="restaurants">
+            <section id="restaurants">
                 <h2 id="restaurants">Restaurants</h2>
-                <article class="carte"><a href="#">
+                <article class="carte"><a href="#palette">
                     <div class="photo">
                         <aside>Nouveau</aside>
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurant la palette du goud"></div>
@@ -54,7 +54,7 @@
                         <p>Ménilmontant</p>
                         </div></a>
                 </article>
-                <article class="carte"><a href="#">
+                <article class="carte"><a href="#note">
                     <div class="photo">
                         <aside>Nouveau</aside>
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée"></div>
@@ -64,7 +64,7 @@
                         <p>Charonne</p>
                         </div></a>
                 </article>
-                <article class="carte"><a href="#">
+                <article class="carte"><a href="#francaise">
                     <div class="photo">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant A la française"></div>
                     <div class="description">
@@ -73,7 +73,7 @@
                         <p>Cité Rouge</p>
                         </div></a>
                 </article>
-                <article class="carte"><a href="#">
+                <article class="carte"><a href="#delice">
                     <div class="photo">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo du restaurant Le délice des sens"></div>
                     <div class="description">
