mise en place des liens menu

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--................2ème SECTION.................-->
             <section id="restaurants">
                 <h2 id="restaurants">Restaurants</h2>
-                <article class="carte"><a href="#palette">
+                <article class="carte"><a href="palette_du_gout.html">
                     <div class="photo">
                         <aside>Nouveau</aside>
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurant la palette du goud"></div>
