modif de nom de fichier

--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -21,7 +21,7 @@
             </div>
         <main>
             <div class="titre">
-                <h1 id="palette">La palette du goût</h1>
+                <h1>La palette du goût</h1>
                 <p class="coeur"><i class="far fa-heart"></i></p>
             </div>
 
