--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <p>Ménilmontant</p>
                         </div></a>
                 </article>
-                <article class="carte"><a href="#note">
+                <article class="carte"><a href="note_enchantee.html">
                     <div class="photo">
                         <aside>Nouveau</aside>
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée"></div>
@@ -64,7 +64,7 @@
                         <p>Charonne</p>
                         </div></a>
                 </article>
-                <article class="carte"><a href="#francaise">
+                <article class="carte"><a href="a_la_francaise.html">
                     <div class="photo">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant A la française"></div>
                     <div class="description">
@@ -73,7 +73,7 @@
                         <p>Cité Rouge</p>
                         </div></a>
                 </article>
-                <article class="carte"><a href="#delice">
+                <article class="carte"><a href="delice_des_sens.html">
                     <div class="photo">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo du restaurant Le délice des sens"></div>
                     <div class="description">
