--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -10,7 +10,10 @@
     </head>
     <body>
         <!--................HEADER...............-->
-        <header> 
+        <header class="header"> 
+        <div class="fleche">
+            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        </div>
         <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
         </div>
