--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </section>
         <!--................2ème SECTION.................-->
             <section id="restaurants">
-                <h2 id="restaurants">Restaurants</h2>
+                <h2>Restaurants</h2>
                 <article class="carte"><a href="palette_du_gout.html">
                     <div class="photo">
                         <aside>Nouveau</aside>
