essai animations check et coeur

--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -32,11 +32,10 @@
                 <div class="blocmenu">
                 <article class="menu">
                     <h4>Fricassée d'escargot</h4>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                     <div class="descriptiontarif">
                         <p class="description_menu">Au piment d'espelette</p>
-                        <p class="tarif">25€</p></div>
-                    
+                        <p class="tarif">25€</p>
+                        <p class="valide"><i class="fas fa-check-circle"></i></p></div>
                 </article>
                 <article class="menu">
                     <h4>Foie gras de canard mi-cuit</h4>
