coeur et suite check vert

--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -25,7 +25,10 @@
         <main>
             <div class="titre">
                 <h1>La palette du goût</h1>
-                <p class="coeur"><i class="far fa-heart"></i></p>
+                <div class="coeur">
+                    <p class="coeurvide"><i class="far fa-heart"></i></p>
+                    <p class="coeurrempli"><i class="fas fa-heart"></i></p>
+                </div>
             </div>
             <section class="detailmenu">
                 <h2>ENTREES</h2>
