--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -27,7 +27,6 @@
                 <h1>La palette du goût</h1>
                 <div class="coeur">
                     <p class="coeurvide"><i class="far fa-heart"></i></p>
-                    <p class="coeurrempli"><i class="fas fa-heart"></i></p>
                 </div>
             </div>
             <section class="detailmenu">
@@ -38,19 +37,21 @@
                     <div class="descriptiontarif">
                         <p class="description_menu">Au piment d'espelette</p>
                         <p class="tarif">25€</p>
-                        <p class="valide"><i class="fas fa-check-circle"></i></p></div>
+                        <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 <article class="menu">
                     <h4>Foie gras de canard mi-cuit</h4>
                     <div class="descriptiontarif">
                     <p class="description_menu">Et ses copeaux de truffe noire</p>
-                    <p class="tarif">35€</p></div>
+                    <p class="tarif">35€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 <article class="menu">
                     <h4>Oeuf au plat</h4>
                     <div class="descriptiontarif">
                     <p class="description_menu">Assaisonné à la truffe sur lit de caviar</p>
-                    <p class="tarif">20€</p></div>
+                    <p class="tarif">20€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 </div>
                 <h2>PLATS</h2>
@@ -59,19 +60,22 @@
                     <h4>Filet de boeuf aux herbes</h4>
                     <div class="descriptiontarif">
                     <p class="description_menu">Accompagné de sa ribambelle de légumes</p>
-                    <p class="tarif">40€</p></div>
+                    <p class="tarif">40€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 <article class="menu">
                     <h4>Parmentier de queue de boeuf</h4>
                     <div class="descriptiontarif">
                     <p class="description_menu">A la truffe noire sur sa purée de panais</p>
-                    <p class="tarif">35€</p></div>
+                    <p class="tarif">35€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 <article class="menu">
                     <h4>Filet de turbo</h4>
                     <div class="descriptiontarif">
                     <p class="description_menu">Aux agrumes</p>
-                    <p class="tarif">44€</p></div>
+                    <p class="tarif">44€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 </div>
                 <h2>DESSERTS</h2>
@@ -80,19 +84,22 @@
                     <h4>Paris-Brest</h4>
                     <div class="descriptiontarif">
                     <p class="description_menu">Revisité</p>
-                    <p class="tarif">18€</p></div>
+                    <p class="tarif">18€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 <article class="menu">
                     <h4>Macaron au chocolat d'exception</h4>
                     <div class="descriptiontarif">
                     <p class="description_menu">Et glace à la vanille de Madagascar</p>
-                    <p class="tarif">22€</p></div>
+                    <p class="tarif">22€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 <article class="menu">
                     <h4>Mousse au chocolat</h4>
                     <div class="descriptiontarif">
                     <p class="description_menu">Au piment d'espelette et à la truffe noire</p>
-                    <p class="tarif">23€</p></div>
+                    <p class="tarif">23€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
                 </article>
                 </div>
             </section>
