--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -31,7 +31,7 @@
             </div>
             <section class="detailmenu">
                 <h2>ENTREES</h2>
-                <div class="blocmenu">
+                <div class="blocmenu blocmenu--entree">
                 <article class="menu">
                     <h4>Fricassée d'escargot</h4>
                     <div class="descriptiontarif">
@@ -55,7 +55,7 @@
                 </article>
                 </div>
                 <h2>PLATS</h2>
-                <div class="blocmenu">
+                <div class="blocmenu blocmenu--plat">
                 <article class="menu">
                     <h4>Filet de boeuf aux herbes</h4>
                     <div class="descriptiontarif">
@@ -79,7 +79,7 @@
                 </article>
                 </div>
                 <h2>DESSERTS</h2>
-                <div class="blocmenu">
+                <div class="blocmenu blocmenu--dessert">
                 <article class="menu">
                     <h4>Paris-Brest</h4>
                     <div class="descriptiontarif">
