debut du loader spinner

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <body>
         <!--................HEADER...............-->
         <header> 
+
+        <p class="loader">ohmyfood</p>
+        <div class="pageloader"></div>
+
+        
         <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
         </div>
