--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -22,7 +22,7 @@
             <div class="photo_menu">
                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
             </div>
-        <main>
+        <main class="main">
             <div class="titre">
                 <h1>La palette du goût</h1>
                 <div class="coeur">
