modif en relation avec navigateur

--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -11,14 +11,12 @@
     <body>
         <!--................HEADER...............-->
         <header class="header"> 
-        <div class="fleche">
-            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        </div>
-        <div class="logo">
+            <a href="index.html"><i class="fas fleche fa-arrow-left"></i></a>
+            <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
-        </div>
+            </div>
         </header>
-        
+        <!--...............MAIN................-->
             <div class="photo_menu">
                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
             </div>
@@ -26,8 +24,8 @@
             <div class="titre">
                 <h1>La palette du goût</h1>
                 <div class="coeur">
-                    <p class="coeurvide"><i class="far fa-heart"></i></p>
-                </div>
+                    <i class="far coeurvide fa-heart"></i>
+                    <i class="fas coeurrempli fa-heart"></i></div>
             </div>
             <section class="detailmenu">
                 <h2>ENTREES</h2>
