--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </main>
         <!--..................FOOTER.................-->
         <footer class="lienloader">
-            <p class="logofooter">ohmyfood</p>
+            <div class="logofooter">ohmyfood</div>
             <div class="menu_footer">
                 <ul>
                 <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
