--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -108,7 +108,7 @@
         </main>
         <!--..................FOOTER.................-->
         <footer>
-            <div class="logofooter"><p>ohmyfood</p></div>
+            <div class="logofooter">ohmyfood</div>
             <div class="menu_footer">
                 <ul>
                 <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
