--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="explorer">
                     <h1>Réservez le menu qui vous convient</h1>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <button><a href="#restaurants">Explorer nos restaurants</a></button>
+                    <a href="#restaurants">Explorer nos restaurants</a>
                 </div>
                 <div class="fonctionnement">
                     <h2>Fonctionnement</h2>
