remise en forme desktop

--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -29,7 +29,7 @@
             </div>
             <section class="detailmenu">
                 <h2>ENTREES</h2>
-                <div class="blocmenu blocmenu--entree">
+                <div class="blocmenu blocmenu--entree blocmenu--note">
                 <article class="menu">
                     <h4>Ravioles de foie gras</h4>
                     <div class="descriptiontarif">
