taille police caractere detail menu

--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -38,7 +38,7 @@
                     <div class="descriptiontarif">
                         <p class="description_menu">Accompagnés de leur crème à la truffe</p>
                         <p class="tarif">25€</p>
-                        <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                        <span class="valide"><i class="fas fa-check-circle"></i></span></div>
                 </article>
                 <article class="menu">
                     <h4>Caviar osciètre</h4>
