essai de modif du check vert

--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -34,11 +34,12 @@
                 <h2>ENTREES</h2>
                 <div class="blocmenu blocmenu--entree blocmenu--note">
                 <article class="menu">
+                    <div class="totaldescription">
                     <h4>Ravioles de foie gras</h4>
                     <div class="descriptiontarif">
                         <p class="description_menu">Accompagnés de leur crème à la truffe</p>
-                        <p class="tarif">25€</p>
-                        <span class="valide"><i class="fas fa-check-circle"></i></span></div>
+                        <p class="tarif">25€</p></div></div>
+                        <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
                     <h4>Caviar osciètre</h4>
